Bug 162161 - reexport of pdf created by XnView appears to be blank
Summary: reexport of pdf created by XnView appears to be blank
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.8.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-07-23 14:36 UTC by Caolán McNamara
Modified: 2024-07-24 12:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample pdf (1.28 MB, application/pdf)
2024-07-23 14:37 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2024-07-23 14:36:43 UTC
Description:
This is with --disable-poppler and --enable-pdfium

Steps to Reproduce:
1. open the attached pdf (opens in draw)
2. export to pdf


Actual Results:
image seems to disappear

Expected Results:
that it is visible


Reproducible: Always


User Profile Reset: No

Additional Info:
the image is actually there, but there is a missing reference which should contain its device colorspace
Comment 1 Caolán McNamara 2024-07-23 14:37:31 UTC
Created attachment 195455 [details]
sample pdf

Cached from https://github.com/CollaboraOnline/online/issues/7173#issuecomment-1702997749
Comment 2 Commit Notification 2024-07-23 19:58:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ea2c60501a600d1f53bfc130e123c0996837b2fa

Resolves: tdf#162161 reexport of specific pdf appears blank

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-07-24 10:07:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/2956d02e2b696ad91ae7b6b92ceb2919a6e4185a

Resolves: tdf#162161 reexport of specific pdf appears blank

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Timur 2024-07-24 12:44:38 UTC
Thanks for fixing. 

This was a regresion in 6.2 from:
commit b10bc896bdceeb3f24269c485272fde2e669922f	[log]
author	Ashod Nakashian <ashod.nakashian@collabora.co.uk>	Wed Jun 06 00:51:10 2018 -0400
committer	Jan Holesovsky <kendy@collabora.com>	Thu Jun 07 10:45:35 2018 +0200
vcl: svx: misc improvements to pdfium importing