Resolves: tdf#162161 reexport of specific pdf appears blank

the contents of the referenced colorspace obj disappears so it gets
rendered blank

Change-Id: Iaa76d355b5903c695e74edadc329043156bad3b6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170906
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>