include/vcl/filter/pdfdocument.hxx
@@ -44,6 +44,7 @@ class PDFDocument;
 class PDFDictionaryElement;
 class PDFArrayElement;
 class PDFStreamElement;
+class PDFNameElement;
 class PDFNumberElement;
 
 /// A byte range in a PDF file.
@@ -73,6 +74,8 @@ class VCL_DLLPUBLIC PDFObjectElement final : public PDFElement
     double m_fGenerationValue;
     /// If set, the object contains this number element (outside any dictionary/array).
     PDFNumberElement* m_pNumberElement;
+    /// If set, the object contains this name element (outside any dictionary/array).
+    PDFNameElement* m_pNameElement;
     /// Position after the '<<' token.
     sal_uInt64 m_nDictionaryOffset;
     /// Length of the dictionary buffer till (before) the '>>' token.
@@ -114,6 +117,8 @@ public:
     void SetDictionary(PDFDictionaryElement* pDictionaryElement);
     void SetNumberElement(PDFNumberElement* pNumberElement);
     PDFNumberElement* GetNumberElement() const;
+    void SetNameElement(PDFNameElement* pNameElement);
+    PDFNameElement* GetNameElement() const;
     /// Get access to the parsed key-value items from the object dictionary.
     const std::map<OString, PDFElement*>& GetDictionaryItems();
     const std::vector<PDFReferenceElement*>& GetDictionaryReferences() const;
